[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "Firmware/emulator for the Cosmo Communicator cover display"
license = "MIT"
name = "codios"
keywords = ["embedded", "microkernel", "emulator", "firmware"]
categories = ["embedded", "firmware", "microkernel"]
publish = false
readme = "/README.md"
repository = "https://github.com/Cosmo-CoDiOS/CoDiOS.git"
version = "0.1.0"
edition = "2021"

[lib]
name = "codios_firmware"
path = "src/lib.rs"

[[bin]]
name = "codios-firmware"
path = "src/bin/codios-firmware.rs"
required-features = ["firmware"]

[[bin]]
name = "codios-emulator"
path =  "src/bin/codios-emulator.rs"
required-features = ["emulator"]

[features]
default = []
firmware = []
emulator = []

[dependencies]
codi_os_protocol = { git = "https://github.com/Cosmo-CoDiOS/codi_protos", branch = "main" }
codi_protocol_common = { git = "https://github.com/Cosmo-CoDiOS/codi_protos", branch = "main" }

embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["log"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-std", "executor-thread", "log", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", features = ["log", "std", "nightly"] }

embedded-io-async = { version = "0.5.0" }
embedded-io-adapters = { version = "0.5.0", features = ["futures-03"] }
critical-section = { version = "1.1", features = ["std"] }

async-io = "1.13.0"
env_logger = "0.10.0"
futures = { version = "0.3.28" }
log = "0.4.20"
nix = "0.26.2"
clap = { version = "4.3.23", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["std"] }
heapless = { version = "0.7.16", default-features = false }
static_cell = { version = "1.2", features = ["nightly"]}

[target.'cfg(any(target_arch = "arm", target_arch = "none"))'.dependencies]
embedded-graphics = "0.8.1"

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["nightly", "defmt", "unstable-pac", "stm32l4r9ai", "memory-x", "time-driver-any", "exti", "unstable-traits", "chrono"]  }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

embedded-hal = "0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }

panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.7.16", default-features = false }
chrono = { version = "^0.4", default-features = false }

micromath = "2.0.0"

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.5.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
strip = true
incremental = false
debug = false
