[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "Firmware/emulator for the Cosmo Communicator cover display"
license = "MIT"
name = "codios"
keywords = ["embedded", "microkernel", "emulator", "firmware"]
categories = ["embedded", "firmware", "microkernel"]
publish = false
readme = "/README.md"
repository = "https://github.com/Cosmo-CoDiOS/CoDiOS.git"
version = "0.1.0"
edition = "2021"

[lib]
name = "codios_firmware"
path = "src/lib.rs"

[[bin]]
name = "codios-firmware"
path = "src/bin/codios-firmware.rs"
required-features = ["firmware"]

[[bin]]
name = "codios-emulator"
path =  "src/bin/codios-emulator.rs"
required-features = ["emulator"]

[features]
default = []
firmware = []
emulator = []

[dependencies]
# codi_os_protocol = { git = "https://github.com/Cosmo-CoDiOS/codi_protocols", branch = "main" }
# codi_protocol_common = { git = "https://github.com/Cosmo-CoDiOS/codi_protocols", branch = "main" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embedded-graphics = "0.8.1"

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "unstable-pac", "stm32l4r9ai", "memory-x", "time-driver-any", "exti", "unstable-traits", "chrono"]  }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0-rc"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }
chrono = { version = "^0.4", default-features = false }

micromath = "2.1.0"

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"

embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["log"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-std", "executor-thread", "log", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", features = ["log", "std", "nightly"] }

embedded-io-async = { version = "0.6.0" }
embedded-io-adapters = { version = "0.6.1", features = ["futures-03"] }
critical-section = { version = "1.1", features = ["std"] }

async-io = "2.3.2"
env_logger = "0.10.2"
futures = { version = "0.3.30" }
log = "0.4.21"
nix = "0.28.0"
clap = { version = "4.5.2", features = ["derive"] }
rand_core = { version = "0.6.3", features = ["std"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.0", features = ["nightly"]}

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
strip = true
incremental = false
debug = false
