[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "Firmware/emulator for the Cosmo Communicator cover display"
license = "MIT"
name = "codios"
keywords = ["embedded", "microkernel", "emulator", "firmware"]
categories = ["embedded", "firmware", "microkernel"]
publish = false
readme = "/README.md"
repository = "https://github.com/Cosmo-CoDiOS/CoDiOS.git"
version = "0.1.0"
edition = "2021"

[lib]
name = "codios"
path = "src/lib.rs"

[[bin]]
name = "codios-firmware"
path = "src/bin/codios-firmware.rs"
required-features = ["firmware"]

[[bin]]
name = "codios-emulator"
path =  "src/bin/codios-emulator.rs"
required-features = ["emulator"]

[features]
default = []
firmware = []
emulator = ["embedded-graphics-simulator/with-sdl"]

[dependencies]
# codi_os_protocol = { git = "https://github.com/Cosmo-CoDiOS/codi_protocols", branch = "main" }
# codi_protocol_common = { git = "https://github.com/Cosmo-CoDiOS/codi_protocols", branch = "main" }

[target.'thumbv7em-none-eabihf'.dependencies]
embedded-graphics = "0.8.1"

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "stm32l4r9ai", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }

defmt = "1.0"
defmt-rtt = "1.1"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "^1.0"
embedded-hal-async = { version = "^1.0" }
panic-probe = { version = "1.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
heapless = { version = "0.9.2", default-features = false }
chrono = { version = "^0.4", default-features = false }

micromath = "2.1.0"

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.6.0", default-features = false }

embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["log"] }
embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-std", "executor-thread", "log", "nightly", "integrated-timers"] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["log", "std"] }

embedded-io-async = { version = "0.7.0" }
embedded-io-adapters = { version = "0.7.0", features = ["futures-03"] }
critical-section = { version = "1.2", features = ["std"] }

async-io = "2.6.0"
env_logger = "0.11.6"
futures = { version = "0.3.30" }
log = "0.4.29"
nix = "0.30.1"
clap = { version = "4.5.54", features = ["derive"] }
rand_core = { version = "0.9.3", features = ["std"] }
heapless = { version = "0.9.2", default-features = false }
static_cell = { version = "2.1", features = ["nightly"]}

sdl2 = { version = "0.35.2", features = ["static-link", "use-pkgconfig"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
strip = true
incremental = false
debug = false
