[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
categories = ["graphics", "ui", "rtos"]
description = "Graphics crate for the CoDirs kernel"
edition = "2018"
keywords = ["ui", "graphics", "rtos"]
license = "MIT OR Apache-2.0"
name = "codirs-graphics"
publish = false
readme = "/README.md"
repository = "https://github.com/shymega/CoDirs.git"
version = "0.1.0"

[lib]
name = "codirs_graphics"
path = "src/lib.rs"

[dependencies]
embedded-graphics = "0.6.2"
