[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
categories = ["microkernel", "rtos"]
description = "The kernel for CoDirs"
edition = "2018"
keywords = ["microkernel", "rtos", "cosmocommunicator", "planetcomputers"]
license = "MIT OR Apache-2.0"
name = "codirs-kernel"
readme = "/README.md"
repository = "https://github.com/shymega/CoDirs.git"
version = "0.1.0"

[lib]
name = "codirs_kernel"
path = "src/lib.rs"

[dependencies]
alloc-cortex-m = "0.4.0"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.4"

[dependencies.serde]
version = "1.0.117"
default-features = false
features = ["derive", "alloc"]

[dependencies.serde_json]
version = "1.0.59"
default-features = false
features = ["alloc"]

[dependencies.stm32l4]
version = "0.12.1"
features = ["stm32l4x6", "rt"]
