[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
categories = ["microkernel", "rtos"]
description = "The kernel for CoDirs"
edition = "2018"
keywords = ["microkernel", "rtos"]
license = "MIT OR Apache-2.0"
name = "codirs-kernel"
publish = false
readme = "/README.md"
repository = "https://github.com/shymega/CoDirs.git"
version = "0.1.0"

[lib]
name = "codirs_kernel"
path = "src/lib.rs"

[dependencies]
alloc-cortex-m = "0.4.1"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

[dependencies.serde]
version = "1.0.126"
default-features = false
features = ["derive", "alloc"]

[dependencies.serde_json]
version = "1.0.64"
default-features = false
features = ["alloc"]

[dependencies.stm32l4]
version = "0.13.0"
features = ["stm32l4x6", "rt"]
